deploy/overlay/gpu02/middleware-ipwhitelist.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: ipwhitelist
  namespace: dalai
spec:
  ipWhiteList:
   sourceRange:
     - 81.185.164.229
     - 86.242.185.95
     - 91.170.182.6
     - 92.184.100.202
     - 165.225.76.229
