deploy/overlay/gpu02/middleware-ratelimit.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: ratelimit
  namespace: dalai
spec:
  rateLimit:
    average: 100
    burst: 50
