deploy/overlay/gpu02/ingressroute-websecure-gpu02-nip.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dalai-websecure-nip
  namespace: dalai
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gradio.83-206-89-105.nip.io`)
      kind: Rule
      services:
        - name: dalai
          port: 7860
      middlewares:
      - name: security
      - name: ratelimit
      - name: ipwhitelist
  tls:
    certResolver: letsencrypt
